<resources>
    <string name="app_name">ApkFilme</string>
    <string name="filmologia">GOLDEN MOVIES</string>
    <string name="movie_name">Movie Name</string>
    <string name="overview">overview</string>
    <string name="release_date">release date</string>
    <string name="popularity">popularity</string>
    <string name="the_movie_name">THE MOVIE NAME</string>
    <string name="poster">poster</string>
    <string name="genre">Genre</string>
    <string name="voteaverage">vote_average</string>
    <string name="m_dia_de_notas">MÉDIA DE NOTAS</string>
</resources>