<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".secondscreen.MovieDetails"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >


    <TextView
        android:id="@+id/nomeApk"
        android:background="@color/black"
        android:text="@string/filmologia"
        android:textColor="@color/yellow"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/movie_poster_card"
            android:layout_width="match_parent"
            android:layout_height="222dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomeApk">


            <ImageView
                android:id="@+id/movie_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/poster"
                tools:srcCompat="@tools:sample/avatars" />


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="141dp"
                android:layout_height="121dp"
                android:layout_gravity="center"
                app:srcCompat="@android:drawable/ic_media_play" />


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/half_grey"
            android:text="@string/movie_name"
            android:maxLines="5"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="match_parent"
            android:layout_height="321dp"
            android:background="@color/half_grey"
            android:layout_marginTop="5dp"
            android:maxLines="5"
            android:text="@string/overview"
            android:textAlignment="inherit"
            android:textColor="@color/white"
            android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="131dp"
                    android:layout_weight="1"
                    android:background="@color/half_grey"
                    android:gravity="center"
                    android:text="@string/release_date"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/popularity"
                    android:background="@color/half_grey"
                    android:text="@string/popularity"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="131dp"/>

            </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>